pfe-modal:  fixes for local var support, padding, theming of broadcast links, support for media, and "jumpiness" on page when modal is opened

--- a/elements/pfe-modal/src/pfe-modal.scss
+++ b/elements/pfe-modal/src/pfe-modal.scss
@@ -10,23 +10,34 @@ $LOCAL-VARIABLES: (
 	MinWidth: 50vw,
 	MaxWidth--mobile: 94vw,
 	MaxHeight: 90vh,
-	Padding: calc(#{pfe-var(container-padding)} * 2) calc(#{pfe-var(container-padding)} * 3.5) calc(#{pfe-var(container-padding)} * 2) calc(#{pfe-var(container-padding)} * 2),
+	Padding: 
+		calc(#{pfe-var(container-padding)} * 2) 
+		calc(#{pfe-var(container-padding)} * 3.5) 
+		calc(#{pfe-var(container-padding)} * 2) 
+		calc(#{pfe-var(container-padding)} * 2),
 	overlay: (
-		BackgroundColor: pfe-var(overlay)
+		BackgroundColor: pfe-var(overlay),
+		Overflow: auto,
+	),
+	window: (
+		BackgroundColor: pfe-var(surface--lightest)
 	),
 	close: (
-		size: calc(#{pfe-var(ui--element--size)} - 4px)
+		size: calc(#{pfe-var(ui--element--size)} - 4px),
+		Padding: pfe-var(container-padding),
+		BackgroundColor: #fff,
 	)
 );
+//@include pfe-local-debug;
 
 :host {
 	display: block;
 	position: relative;
 
    @media screen and (max-height: $pfe-modal--breakpoint--medium) {
-	   @include pfe-print-local((
-		   Padding: 0 0 0 calc(#{pfe-var(container-padding)} * 2)
-	   ));
+	   Padding: pfe-local( Padding, 
+		   $fallback: "0 0 0 calc( #{pfe-var(container-padding)} * 2)" 
+	   );
    }
 }
 
@@ -62,19 +73,28 @@ $LOCAL-VARIABLES: (
 	}
 	&__window {
 		--theme: #{pfe-local(theme)};
-
+		//todo , this is a workaround:
+		@include pfe-set-broadcast-theme(light);
 		position: relative;
 		max-width: pfe-local(MaxWidth--mobile);
 		min-width: pfe-local(MinWidth);
 		max-height: pfe-local(MaxHeight);
 		margin: 0 auto;
 		box-shadow: pfe-var(box-shadow--lg);
-		background-color: pfe-var(surface--lightest);
+		background-color: pfe-local(BackgroundColor, $region: window); 
+
 		color: pfe-var(text);
 		border-radius: pfe-var(ui--border-radius);
 		
 		@media screen and (min-width: $pfe-modal--breakpoint--medium) {
 			max-width: pfe-local(MaxWidth);
+		}
+		:host([media]) & { 
+			--pfe-modal--MinWidth: none;
+			--pfe-modal--MinHeight: none;
+			--pfe-modal--MaxWidth: 90vw;
+ 			--pfe-modal--MaxWidth--mobile: 90vw;
+			--pfe-modal--MaxHeight: 90vh; 
 		}
 	}
 	&__container {
@@ -87,16 +107,20 @@ $LOCAL-VARIABLES: (
 	}
 
 	&__content {
-		overflow-y: auto;
+		overflow-y: pfe-local(Overflow, $region: overlay);
 		overscroll-behavior: contain;
-		max-height: pfe-local(MaxHeight);
+		height: pfe-local(MaxHeight);
 		padding: pfe-local(Padding);
 		box-sizing: border-box;
 
 		@media screen and (max-height: $pfe-modal--breakpoint--medium) {
-			@include pfe-print-local((
-				Padding: pfe-var(container-padding) calc(#{pfe-var(container-padding)} * 3) pfe-var(container-padding) pfe-var(container-padding)
-			));
+			--pfe-modal--Padding:  
+				#{pfe-var(container-padding) }
+				calc(#{pfe-var(container-padding)} * 3) 
+				#{pfe-var(container-padding) }
+				#{pfe-var(container-padding)}
+			;
+			
 		}
 
 		:host(:not([has_header])) & {
@@ -105,6 +129,24 @@ $LOCAL-VARIABLES: (
 			::slotted(*:nth-child(2)),
 			::slotted(*:nth-child(1)) {
 				margin-top: 0 !important;
+			}
+		}
+		:host([media]) & {
+			--pfe-modal__overlay--Overflow: hidden;
+			--pfe-modal--Padding: 0px;
+			text-align: center;
+			height: auto;
+
+			::slotted(*) {
+				max-height: 100%;
+				max-width: 100%;
+				height: auto;
+				max-height: pfe-local(MaxHeight);
+				width: auto;
+			}
+			::slotted(img) {
+				// line-height: 0;
+				display: block;
 			}
 		}
 
@@ -120,7 +162,8 @@ $LOCAL-VARIABLES: (
 		right: 	calc(#{pfe-var(container-padding)} * .25);
 		cursor: pointer;
 		line-height: .5;
-		padding: pfe-var(container-padding);
+		padding: pfe-local(Padding, $region: close);
+		background-color: pfe-local(BackgroundColor, $region: close);
 
 		@media screen and (min-width: $pfe-modal--breakpoint--medium) {
 			top: 	pfe-var(container-padding);
@@ -138,6 +181,16 @@ $LOCAL-VARIABLES: (
 			width: 	pfe-var(ui--element--size);
 			height: pfe-local(size, $region: close);
 			width: 	pfe-local(size, $region: close);
+		}
+
+		:host([media]) & {
+			top: 0px; 
+			right: 0;
+			border-radius: 3px;
+			padding: 7px;
+			--pfe-modal__close--size: 15px;
+			--pfe-modal__close--Padding: 10px;
+			--pfe-modal__close--BackgroundColor: #ffffff63;
 		}
 	}
 }
